feat: 메인 섹션 기본 구조 마크업

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <aside class="devlog-box">
                 <h2>DevLog</h2>
                 <ul class="log-list">
-                    <li class="date">2025-06-25</li>
+                    <li class="date">2025-06-30</li>
                     <li>
                         <ul class="log">
                             <li><strong>메인 마크업</strong><em>업로드</em></li>
@@ -48,18 +48,16 @@
                     </thead>
                     <tbody>
                         <tr class="">
-                            <td>인트로</td>
+                            <td>메인</td>
                             <td><span class="url">main.html</span></td>
                             <td class="btns">
                                 <a class="pcBtn" href="pb/main.html" target="_blank">PC</a>
                                 <a class="moBtn" href="pb/main.html">MO</a>
                             </td>
-                            <td>완료</td>
+                            <td>진행중</td>
                             <td>
                                 <ul>
-                                    <li><strong>[06-25]</strong>업로드</li>
-                                    <li><strong>[06-25]</strong>업로드</li>
-                                    <li><strong>[06-25]</strong>업로드</li>
+                                    <li><strong>[06-30]</strong>업로드</li>
                                 </ul>
                             </td>
                         </tr>
