style: 섹션 스타일 추가 및 클래스 정리

--- a/pb/main.html
+++ b/pb/main.html
@@ -79,7 +79,7 @@
 		</header>
 		<main class="main">
 			<section class="main-vi">
-				<div class="inner-padding sec__inner-padding">
+				<div class="inner-padding main-vi__inner-padding">
 					<div class="main-vi__top">
 						<h2 class="main-vi__slogan">
 							<div class="main-vi__slogan-line">
@@ -110,34 +110,41 @@
 			</section>
 			<!-- S:philosophy -->
 			<section class="section philosophy">
-				<div class="inner-padding sec__inner-padding">
-					<h3 class="sec__label sec__label--dark">
-						<i>
-							<svg width="24" height="25" viewBox="0 0 24 25" fill="none"
-								xmlns="http://www.w3.org/2000/svg">
-								<path
-									d="M9.663 17.5H14.336M12 3.5V4.5M18.364 6.136L17.657 6.843M21 12.5H20M4 12.5H3M6.343 6.843L5.636 6.136M8.464 16.036C7.76487 15.3367 7.2888 14.4458 7.09598 13.4759C6.90316 12.506 7.00225 11.5008 7.38073 10.5872C7.75921 9.67366 8.40007 8.89284 9.22229 8.34349C10.0445 7.79414 11.0111 7.50093 12 7.50093C12.9889 7.50093 13.9555 7.79414 14.7777 8.34349C15.5999 8.89284 16.2408 9.67366 16.6193 10.5872C16.9977 11.5008 17.0968 12.506 16.904 13.4759C16.7112 14.4458 16.2351 15.3367 15.536 16.036L14.988 16.583C14.6747 16.8963 14.4262 17.2683 14.2567 17.6777C14.0872 18.0871 13.9999 18.5259 14 18.969V19.5C14 20.0304 13.7893 20.5391 13.4142 20.9142C13.0391 21.2893 12.5304 21.5 12 21.5C11.4696 21.5 10.9609 21.2893 10.5858 20.9142C10.2107 20.5391 10 20.0304 10 19.5V18.969C10 18.074 9.644 17.215 9.012 16.583L8.464 16.036Z"
-									stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-							</svg>
-						</i>
-						Our Philosophy
-					</h3>
-					<h2 class="sec__tit sec__tit--st1">We Build <br> AI Businesses</h2>
-					<p class="sec__desc">
-						오보아는 단순한 개발이 아닌, AI 기반 비즈니스의 전 과정을 설계하고 실행하는 파트너입니다. <br>
-						기획, 디자인, 개발, 운영까지 모든 과정을 자체 수행하며, 복잡한 시스템 아키텍처와 대형 프로젝트 경험을 보유한 <br>
-						고급 인력 중심의 풀스택 팀이 빠르고 정확하게 대응합니다. 전국 단위 프랜차이즈 모델을 통해 지역 <br>
-						확장도 지원하며, AI 업계의 ‘기본 인프라’가 되는 브랜드를 지향합니다.
-					</p>
+				<div class="inner-padding philosophy__inner-padding">
+					<div class="philosophy_left">
+						<h3 class="sec__label sec__label--dark">
+							<i>
+								<svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M9.663 17.5H14.336M12 3.5V4.5M18.364 6.136L17.657 6.843M21 12.5H20M4 12.5H3M6.343 6.843L5.636 6.136M8.464 16.036C7.76487 15.3367 7.2888 14.4458 7.09598 13.4759C6.90316 12.506 7.00225 11.5008 7.38073 10.5872C7.75921 9.67366 8.40007 8.89284 9.22229 8.34349C10.0445 7.79414 11.0111 7.50093 12 7.50093C12.9889 7.50093 13.9555 7.79414 14.7777 8.34349C15.5999 8.89284 16.2408 9.67366 16.6193 10.5872C16.9977 11.5008 17.0968 12.506 16.904 13.4759C16.7112 14.4458 16.2351 15.3367 15.536 16.036L14.988 16.583C14.6747 16.8963 14.4262 17.2683 14.2567 17.6777C14.0872 18.0871 13.9999 18.5259 14 18.969V19.5C14 20.0304 13.7893 20.5391 13.4142 20.9142C13.0391 21.2893 12.5304 21.5 12 21.5C11.4696 21.5 10.9609 21.2893 10.5858 20.9142C10.2107 20.5391 10 20.0304 10 19.5V18.969C10 18.074 9.644 17.215 9.012 16.583L8.464 16.036Z"
+										stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+								</svg>
+							</i>
+							Our Philosophy
+						</h3>
+						<h2 class="sec__tit sec__tit--st1 philosophy__tit">We Build <br> AI Businesses</h2>
+						<p class="sec__desc">
+							오보아는 단순한 개발이 아닌, AI 기반 비즈니스의 전 과정을 설계하고 실행하는 파트너입니다. <br>
+							기획, 디자인, 개발, 운영까지 모든 과정을 자체 수행하며, 복잡한 시스템 아키텍처와 대형 프로젝트 경험을 보유한 <br>
+							고급 인력 중심의 풀스택 팀이 빠르고 정확하게 대응합니다. 전국 단위 프랜차이즈 모델을 통해 지역 <br>
+							확장도 지원하며, AI 업계의 ‘기본 인프라’가 되는 브랜드를 지향합니다.
+						</p>
+					</div>
+					<div class="philosophy_right">
+						<video class="philosophy__video" autoplay muted loop playsinline>
+							<source src="../resource/www/img/main/video_philosophy.mp4" type="video/mp4" />
+						</video>
+					</div>
 				</div>
 			</section>
 			<!-- E:philosophy -->
 
 			<!-- S:achieve -->
 			<section class="section achieve">
-				<div class="inner-padding sec__inner-padding">
+				<div class="inner-padding achieve__inner-padding">
 					<div class="sec__head">
-						<h2 class="sec__tit sec__tit--st2">What We've <br> Achieved</h2>
+						<h2 class="sec__tit sec__tit--st2 achieve__tit">What We've <br> Achieved</h2>
 					</div>
 					<div class="sec__body">
 						<ul class="achieve__list">
@@ -175,8 +182,8 @@
 			<!-- E:visual -->
 
 			<!-- S:marquee -->
-			<section class="marquee marquee--variant1">
-				<div class="marquee__inner">
+			<section class="marquee">
+				<div class="marquee__inner marquee__inner--st1">
 					<ul class="marquee__list">
 						<li class="marquee__item">AI Business Solutions</li>
 						<li class="marquee__item">Custom Chatbot Development</li>
@@ -197,7 +204,7 @@
 
 			<!-- S:ai -->
 			<section class="section ai">
-				<div class="inner-padding sec__inner-padding">
+				<div class="inner-padding ai__inner-padding">
 					<div class="sec__head">
 						<h3 class="sec__label sec__label--dark">
 							<i>
@@ -212,30 +219,29 @@
 							OBOA AI
 						</h3>
 					</div>
-					<div class="sec__body">
-						<div class="">
-							<h2 class="sec__tit sec__tit--st3">
-								We build emotionally intelligent AI that <br> speaks, feels, and responds. From voice to
-								<br>
-								emotion to music, <picture><img src="../resource/www/img/main/img_ai.png" alt="">
-								</picture>
-								your brand <br> becomes interactive.
-							</h2>
-							<a href="#none" class="more-btn--dark">
+					<div class="sec__body ai__body">
+						<div>
+							<h2 class="sec__tit sec__tit--st3">We build emotionally intelligent AI that</h2>
+							<h2 class="sec__tit sec__tit--st3">speaks, feels, and responds. From voice to</h2>
+							<h2 class="sec__tit sec__tit--st3">emotion to music, <picture><img src="../resource/www/img/main/img_ai.png" alt=""></picture> your brand</h2>
+							<h2 class="sec__tit sec__tit--st3">becomes interactive.</h2>
+							<a href="#none" class="more-btn more-btn--dark ai__more-btn">
 								<span>Learn more</span>
 								<i>
 									<svg width="14" height="14" viewBox="0 0 14 14" fill="none"
 										xmlns="http://www.w3.org/2000/svg">
 										<path
 											d="M8.16667 2.91675L12.25 7.00008M12.25 7.00008L8.16667 11.0834M12.25 7.00008H1.75"
-											stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+											stroke="white" stroke-width="1.5px" stroke-linecap="round" stroke-linejoin="round" />
 									</svg>
 								</i>
 							</a>
 						</div>
-						<video class="ai__video" autoplay muted loop playsinline>
-							<source src="../resource/www/img/main/video_ai.mp4" type="video/mp4" />
-						</video>
+						<div class="ai__media">
+							<video class="ai__video" autoplay muted loop playsinline>
+								<source src="../resource/www/img/main/video_ai.mp4" type="video/mp4" />
+							</video>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -253,25 +259,27 @@
 					</i>
 					OBOA Studio
 				</h3>
-				<h2 class="sec__tit">End-to-End Web, App, and System Development</h2>
-				<a href="#none" class="more-btn--light">
+				<h2 class="sec__tit sec__tit--st6 studio__tit">End-to-End Web, App, and System Development</h2>
+				<a href="#none" class="more-btn more-btn--light">
 					<span>Learn more</span>
 					<i>
 						<svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M8.16667 2.91675L12.25 7.00008M12.25 7.00008L8.16667 11.0834M12.25 7.00008H1.75"
-								stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+								stroke="black" stroke-width="1.5px" stroke-linecap="round" stroke-linejoin="round" />
 						</svg>
 					</i>
 				</a>
-				<video class="studio__video" autoplay muted loop playsinline>
-					<source src="../resource/www/img/main/video_ai.mp4" type="video/mp4" />
-				</video>
+				<div class="studio__media">
+					<video class="studio__video" autoplay muted loop playsinline>
+						<source src="../resource/www/img/main/video_studio.mp4" type="video/mp4" />
+					</video>
+				</div>	
 			</section>
 			<!-- E:studio -->
 
 			<!-- S:commerce -->
 			<section class="section commerce">
-				<div class="inner-padding sec__inner-padding">
+				<div class="inner-padding commerce__inner-padding">
 					<div class="commerce__left">
 						<h3 class="sec__label sec__label--dark">
 							<i>
@@ -285,16 +293,18 @@
 							</i>
 							OBOA Commerce
 						</h3>
-						<h2 class="sec__tit sec__tit--st1">Smart AI<br>Commerce that</h2>
+						<h2 class="sec__tit sec__tit--st1 commerce__tit">Smart AI<br>Commerce that</h2>
 					</div>
 					<div class="commerce__center">
-						<video class="commerce__video" autoplay muted loop playsinline>
-							<source src="../resource/www/img/main/video_commerce.mp4" type="video/mp4" />
-						</video>
+						<div class="commerce__media">
+							<video class="commerce__video" autoplay muted loop playsinline>
+								<source src="../resource/www/img/main/video_commerce.mp4" type="video/mp4" />
+							</video>
+						</div>
 					</div>
 					<div class="commerce__right">
-						<h2 class="sec__tit sec__tit--st1">Recommends<br>and Scales</h2>
-						<a href="#none" class="more-btn--dark">
+						<h2 class="sec__tit sec__tit--st1 commerce__tit">Recommends<br>and Scales</h2>
+						<a href="#none" class="more-btn more-btn--dark">
 							<span>Learn more</span>
 							<i>
 								<svg width="14" height="14" viewBox="0 0 14 14" fill="none"
@@ -327,7 +337,7 @@
 					</h3>
 					<h2 class="sec__tit sec__tit--st4">We train founders to launch <br> real AI businesses—no coding
 						required.</h2>
-					<a href="#none" class="more-btn--light">
+					<a href="#none" class="more-btn more-btn--light">
 						<span>Learn more</span>
 						<i>
 							<svg width="14" height="14" viewBox="0 0 14 14" fill="none"
@@ -361,7 +371,7 @@
 						OBOA studio
 					</h3>
 					<h2 class="sec__tit sec__tit--st1">From branding <br> to backend <br> we build it all</h2>
-					<a href="#none" class="more-btn--dark">
+					<a href="#none" class="more-btn more-btn--dark">
 						<span>Learn more</span>
 						<i>
 							<svg width="14" height="14" viewBox="0 0 14 14" fill="none"
@@ -554,7 +564,7 @@
 				<div class="inner-padding sec__inner-padding">
 					<div class="sec__head">
 						<h2 class="sec__tit sec__tit--st2">What’s New <br>at OBOA</h2>
-						<a href="#none" class="more-btn--dark">
+						<a href="#none" class="more-btn more-btn--dark">
 							<span>Learn more</span>
 							<i>
 								<svg width="14" height="14" viewBox="0 0 14 14" fill="none"
