--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                             <td>진행중</td>
                             <td>
                                 <ul>
-                                    <li><strong>[06-30]</strong>업로드</li>
+                                    <li><strong>[06-30]</strong>최초 업로드</li>
+                                    <li><strong>[07-01]</strong>기본구조 마크업, 폰트 업로드</li>
                                 </ul>
                             </td>
                         </tr>
