style: 섹션 스타일 추가

--- a/pb/main.html
+++ b/pb/main.html
@@ -132,7 +132,7 @@
 						</p>
 					</div>
 					<div class="philosophy_right">
-						<video class="philosophy__video" autoplay muted loop playsinline>
+						<video class="philosophy__video video" autoplay muted loop playsinline>
 							<source src="../resource/www/img/main/video_philosophy.mp4" type="video/mp4" />
 						</video>
 					</div>
@@ -174,7 +174,7 @@
 			<!-- S:visual -->
 			<section class="section visual">
 				<div class="visual__media">
-					<video class="visual__video" autoplay muted loop playsinline>
+					<video class="visual__video video" autoplay muted loop playsinline>
 						<source src="../resource/www/img/main/video_visual.mp4" type="video/mp4" />
 					</video>
 				</div>
@@ -225,7 +225,7 @@
 							<h2 class="sec__tit sec__tit--st3">speaks, feels, and responds. From voice to</h2>
 							<h2 class="sec__tit sec__tit--st3">emotion to music, <picture><img src="../resource/www/img/main/img_ai.png" alt=""></picture> your brand</h2>
 							<h2 class="sec__tit sec__tit--st3">becomes interactive.</h2>
-							<a href="#none" class="more-btn more-btn--dark ai__more-btn">
+							<a href="#none" class="more-btn more-btn--dark ai__more-btn mt30">
 								<span>Learn more</span>
 								<i>
 									<svg width="14" height="14" viewBox="0 0 14 14" fill="none"
@@ -238,7 +238,7 @@
 							</a>
 						</div>
 						<div class="ai__media">
-							<video class="ai__video" autoplay muted loop playsinline>
+							<video class="ai__video video" autoplay muted loop playsinline>
 								<source src="../resource/www/img/main/video_ai.mp4" type="video/mp4" />
 							</video>
 						</div>
@@ -259,7 +259,7 @@
 					</i>
 					OBOA Studio
 				</h3>
-				<h2 class="sec__tit sec__tit--st6 studio__tit">End-to-End Web, App, and System Development</h2>
+				<h2 class="sec__tit sec__tit--st6 studio__tit mt30 mb30">End-to-End Web, App, and System Development</h2>
 				<a href="#none" class="more-btn more-btn--light">
 					<span>Learn more</span>
 					<i>
@@ -270,7 +270,7 @@
 					</i>
 				</a>
 				<div class="studio__media">
-					<video class="studio__video" autoplay muted loop playsinline>
+					<video class="studio__video video" autoplay muted loop playsinline>
 						<source src="../resource/www/img/main/video_studio.mp4" type="video/mp4" />
 					</video>
 				</div>	
@@ -293,25 +293,28 @@
 							</i>
 							OBOA Commerce
 						</h3>
-						<h2 class="sec__tit sec__tit--st1 commerce__tit">Smart AI<br>Commerce that</h2>
+						<h2 class="sec__tit sec__tit--st1 commerce__tit mt30">Smart AI<br>Commerce that</h2>
 					</div>
 					<div class="commerce__center">
 						<div class="commerce__media">
-							<video class="commerce__video" autoplay muted loop playsinline>
+							<video class="commerce__video video" autoplay muted loop playsinline>
 								<source src="../resource/www/img/main/video_commerce.mp4" type="video/mp4" />
 							</video>
 						</div>
 					</div>
 					<div class="commerce__right">
-						<h2 class="sec__tit sec__tit--st1 commerce__tit">Recommends<br>and Scales</h2>
-						<a href="#none" class="more-btn more-btn--dark">
+						<h2 class="sec__tit sec__tit--st1 commerce__tit commerce__tit--black">Recommends<br>and Scales</h2>
+						<h2 class="sec__tit sec__tit--st1 commerce__tit commerce__tit--white">Recommends<br>and Scales</h2>
+						<a href="#none" class="more-btn more-btn--dark mt30">
 							<span>Learn more</span>
 							<i>
 								<svg width="14" height="14" viewBox="0 0 14 14" fill="none"
 									xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M8.16667 2.91675L12.25 7.00008M12.25 7.00008L8.16667 11.0834M12.25 7.00008H1.75"
-										stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+										stroke="white" 
+										stroke-width="1.5px"
+										stroke-linecap="round" stroke-linejoin="round" />
 								</svg>
 							</i>
 						</a>
@@ -322,7 +325,7 @@
 
 			<!-- S:education -->
 			<section class="section education">
-				<div class="inner-padding sec__inner-padding">
+				<div class="inner-padding">
 					<h3 class="sec__label sec__label--light">
 						<i>
 							<svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -335,7 +338,7 @@
 						</i>
 						OBOA Education
 					</h3>
-					<h2 class="sec__tit sec__tit--st4">We train founders to launch <br> real AI businesses—no coding
+					<h2 class="sec__tit sec__tit--st4 education__tit mt30 mb30">We train founders to launch <br> real AI businesses—no coding
 						required.</h2>
 					<a href="#none" class="more-btn more-btn--light">
 						<span>Learn more</span>
@@ -344,11 +347,13 @@
 								xmlns="http://www.w3.org/2000/svg">
 								<path
 									d="M8.16667 2.91675L12.25 7.00008M12.25 7.00008L8.16667 11.0834M12.25 7.00008H1.75"
-									stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+									stroke="black" stroke-width="1.5px" stroke-linecap="round" stroke-linejoin="round" />
 							</svg>
 						</i>
 					</a>
-					<video class="education__video" autoplay muted loop playsinline>
+				</div>
+				<div class="education__media">
+					<video class="education__video video" autoplay muted loop playsinline>
 						<source src="../resource/www/img/main/video_education.mp4" type="video/mp4" />
 					</video>
 				</div>
@@ -357,8 +362,8 @@
 
 			<!-- S:project -->
 			<section class="section project">
-				<div class="inner-padding sec__inner-padding">
-					<h3 class="sec__label sec__label--dark">
+				<div class="inner-padding">
+					<h3 class="sec__label sec__label--dark mb30">
 						<i>
 							<svg width="24" height="25" viewBox="0 0 24 25" fill="none"
 								xmlns="http://www.w3.org/2000/svg">
@@ -371,14 +376,14 @@
 						OBOA studio
 					</h3>
 					<h2 class="sec__tit sec__tit--st1">From branding <br> to backend <br> we build it all</h2>
-					<a href="#none" class="more-btn more-btn--dark">
+					<a href="#none" class="more-btn more-btn--dark mt30">
 						<span>Learn more</span>
 						<i>
 							<svg width="14" height="14" viewBox="0 0 14 14" fill="none"
 								xmlns="http://www.w3.org/2000/svg">
 								<path
 									d="M8.16667 2.91675L12.25 7.00008M12.25 7.00008L8.16667 11.0834M12.25 7.00008H1.75"
-									stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+									stroke="white" stroke-width="1.5px" stroke-linecap="round" stroke-linejoin="round" />
 							</svg>
 						</i>
 					</a>
@@ -400,8 +405,8 @@
 			<!-- E:project -->
 
 			<!-- S:marquee -->
-			<section class="marquee marquee--variant2">
-				<div class="marquee__inner">
+			<section class="marquee">
+				<div class="marquee__inner marquee__inner--st2">
 					<ul class="marquee__list">
 						<li class="marquee__item">AI Business Solutions</li>
 						<li class="marquee__item">Custom Chatbot Development</li>
@@ -497,13 +502,20 @@
 						<div class="vision__item"><img src="../resource/www/img/main/icn_vision06.svg" alt="" /></div>
 					</div>
 				</div>
+				<div class="vision__media">
+					<video class="vision__video video" autoplay muted loop playsinline>
+						<source src="../resource/www/img/main/video_vision.mp4" type="video/mp4" />
+					</video>
+				</div>
 			</section>
 			<!-- E:vision -->
 
 			<!-- S:skill -->
 			<section class="section skill">
-				<h2 class="sec__tit sec__tit--st1">All-in-One <br> AI Business Solutions</h2>
-				<h2 class="sec__desc">From branding to backend – everything under one roof.</h2>
+				<div class="inner-padding">
+					<h2 class="sec__tit sec__tit--st1 skill__tit">All-in-One <br> AI Business Solutions</h2>
+					<h2 class="sec__desc sec__desc--st2">From branding to backend – everything under one roof.</h2>
+				</div>
 				<div class="skill__stack">
 					<div class="skill__item">
 						<i><img src="../resource/www/img/main/icn_skill-react.svg" alt=""></i>
@@ -538,7 +550,7 @@
 						PostgreSQL
 					</div>
 					<div class="skill__item">
-						<i><img src="../resource/www/img/main/icn_skill-reactnative.svg" alt=""></i>
+						<i><img src="../resource/www/img/main/icn_skill-react.svg" alt=""></i>
 						React Native
 					</div>
 					<div class="skill__item">
@@ -551,8 +563,8 @@
 					</div>
 
 				</div>
-				<div class="skill__bg">
-					<video class="skill__video" autoplay muted loop playsinline>
+				<div class="skill__media">
+					<video class="skill__video video" autoplay muted loop playsinline>
 						<source src="../resource/www/img/main/video_skill.mp4" type="video/mp4" />
 					</video>
 				</div>
@@ -561,9 +573,9 @@
 
 			<!-- S:notice -->
 			<section class="section notice">
-				<div class="inner-padding sec__inner-padding">
+				<div class="inner-padding notice__inner-padding">
 					<div class="sec__head">
-						<h2 class="sec__tit sec__tit--st2">What’s New <br>at OBOA</h2>
+						<h2 class="sec__tit sec__tit--st2 mb30">What’s New <br>at OBOA</h2>
 						<a href="#none" class="more-btn more-btn--dark">
 							<span>Learn more</span>
 							<i>
@@ -571,7 +583,7 @@
 									xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M8.16667 2.91675L12.25 7.00008M12.25 7.00008L8.16667 11.0834M12.25 7.00008H1.75"
-										stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+										stroke="white"  stroke-width="1.5px" stroke-linecap="round" stroke-linejoin="round" />
 								</svg>
 							</i>
 						</a>
@@ -584,12 +596,12 @@
 									<em>12</em>
 								</div>
 								<div class="notice__text">
-									<strong class="notice__tit">OBOA AI, 감정형 캐릭터 챗봇 베타 출시</strong>
-									<p class="notice__desc txt-over2">오보아는 자사 AI 플랫폼을 통해 자체 개발한 감정형 캐릭터 챗봇 ‘오보이(OBOI)’의
+									<strong>OBOA AI, 감정형 캐릭터 챗봇 베타 출시</strong>
+									<p class="txt-over2">오보아는 자사 AI 플랫폼을 통해 자체 개발한 감정형 캐릭터 챗봇 ‘오보이(OBOI)’의
 										베타 서비스를 12일부터 공식 오픈했다고 밝혔다. 오보이는 단순한 대화 응답을 넘어, 사용자 톤과 감정에 따라 목소리와 표정, 배경
 										음악(BGM)까지 함께 변하는 몰입형 인터랙션을 제공한다. 특히 텍스트 감정 분석 및 AI 음성 합성 기술을 활용해 대화의 자연스러움과 몰입도를
 										크게 높였다. 이번 베타는 브랜드 챗봇 도입을 원하는 기업 고객 대상으로 운영되며, 연내 정식 상용화 예정이다.</p>
-									<a href="#none" class="notice__link">VIEW MORE +</a>
+									<a href="#none">VIEW MORE +</a>
 								</div>
 							</li>
 							<li class="notice__item">
@@ -598,12 +610,12 @@
 									<em>20</em>
 								</div>
 								<div class="notice__text">
-									<strong class="notice__tit"> AI 창업 입문서 『누구나 AI 사업의 시작은 오보아에서』 출간</strong>
-									<p class="notice__desc txt-over2">오보아는 자사의 실무 노하우를 집대성한 AI 창업 입문서 『누구나 AI 사업의 시작은
+									<strong> AI 창업 입문서 『누구나 AI 사업의 시작은 오보아에서』 출간</strong>
+									<p class="txt-over2">오보아는 자사의 실무 노하우를 집대성한 AI 창업 입문서 『누구나 AI 사업의 시작은
 										오보아에서』를 공식 출간했다고 밝혔다. 이 책은 비개발자도 이해할 수 있는 AI 기술 흐름부터, 실제 창업자들이 겪는 기획·개발·수익화 과정까지
 										케이스 기반으로 정리되어 있다. 또한 실전 중심의 AI 자동화 시스템 구축 가이드를 포함해, 오보아 플랫폼을 통해 실제 수익을 창출할 수 있는
 										실용적인 커리큘럼을 제공한다. 현재 전국 주요 온·오프라인 서점 및 전자책 플랫폼에서 구매할 수 있다.</p>
-									<a href="#none" class="notice__link">VIEW MORE +</a>
+									<a href="#none">VIEW MORE +</a>
 								</div>
 							</li>
 							<li class="notice__item">
@@ -612,12 +624,12 @@
 									<em>10</em>
 								</div>
 								<div class="notice__text">
-									<strong class="notice__tit"> OBOA, 서울대병원에 헬스케어 ERP 정식 공급</strong>
-									<p class="notice__desc txt-over2">오보아는 서울대학교병원과 함께 맞춤형 헬스케어 ERP 시스템 구축을 완료하고 1월부터 정식
+									<strong> OBOA, 서울대병원에 헬스케어 ERP 정식 공급</strong>
+									<p class="txt-over2">오보아는 서울대학교병원과 함께 맞춤형 헬스케어 ERP 시스템 구축을 완료하고 1월부터 정식
 										공급을 시작했다고 22일 밝혔다. 해당 시스템은 병원 내 진료·예약·약국·정산 업무를 하나의 플랫폼에서 통합 관리할 수 있도록 설계됐으며, 병원
 										맞춤 로직과 환자 흐름 데이터 분석 기능까지 탑재됐다. 특히 Flutter 기반 모바일 관리자 기능과 실시간 알림, 보험청구 연동까지 포함되어
 										중대형 병원에 최적화된 형태다.</p>
-									<a href="#none" class="notice__link">VIEW MORE +</a>
+									<a href="#none">VIEW MORE +</a>
 								</div>
 							</li>
 						</ul>
@@ -629,22 +641,25 @@
 		</main>
 		<footer class="footer">
 			<div class="inner-padding footer_inner-padding">
-				<div class="footer_top">
+				<div class="footer__top">
 					<div class="footer__left">
 						<h2 class="footer__title">Let’s Work <br>together</h2>
 					</div>
 					<div class="footer__right">
 						<h3 class="footer__label">Contacts</h3>
-						<p class="footer__phone">+82 10 1234 5678</p>
-						<p class="footer__email">hello@oboa.com</p>
+						<p class="footer__info">+82 10 1234 5678</p>
+						<p class="footer__info">hello@oboa.com</p>
 						<div class="footer__family">
 							<button type="button" class="footer__family-btn">
-								Family Site <span>+</span>
+								Family Site 
+								<svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M9 3.5V15.5M15 9.5H3" stroke="black" stroke-width="2" stroke-linecap="square"/>
+								</svg>
 							</button>
 							<ul class="footer__family-list">
-								<li><a href="#none" class="footer__family-link">패밀리 사이트1</a></li>
-								<li><a href="#none" class="footer__family-link">패밀리 사이트2</a></li>
-								<li><a href="#none" class="footer__family-link">패밀리 사이트3</a></li>
+								<li><a href="#none">패밀리 사이트1</a></li>
+								<li><a href="#none">패밀리 사이트2</a></li>
+								<li><a href="#none">패밀리 사이트3</a></li>
 							</ul>
 						</div>
 					</div>
